--- a/Parabolic/Parabolic/App.config
+++ b/Parabolic/Parabolic/App.config
@@ -1,6 +1,49 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  </configSections>
+  <log4net>
+    <root>
+      <level value="ALL" />
+      <appender-ref ref="FileAppender" />
+      <appender-ref ref="ConsoleAppender" />
+    </root>
+    <appender name="FileAppender" type="log4net.Appender.FileAppender">
+      <file value="parabolic.log" />
+      <appendToFile value="false" />
+      <layout type="log4net.Layout.PatternLayout">
+        <header value="DateTime | Level | Message&#xD;&#xA;" />
+        <conversionPattern value="%date | %-5level | %message%newline" />
+      </layout>
+    </appender>
+    <appender name="ConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <levelMin value="INFO" />
+        <levelMax value="FATAL" />
+      </filter>
+      <mapping>
+        <level value="ERROR" />
+        <foreColor value="Red" />
+      </mapping>
+      <mapping>
+        <level value="WARN" />
+        <foreColor value="Yellow" />
+      </mapping>
+      <mapping>
+        <level value="INFO" />
+        <foreColor value="White" />
+      </mapping>
+      <mapping>
+        <level value="DEBUG" />
+        <foreColor value="Green" />
+      </mapping>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%message%newline" />
+      </layout>
+    </appender>
+  </log4net>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
 </configuration>
