--- a/Parabolic/Parabolic/Parabolic.csproj
+++ b/Parabolic/Parabolic/Parabolic.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{2A55446F-D763-47B3-BFCD-0A3B2E12D535}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Parabolic</RootNamespace>
-    <AssemblyName>Parabolic</AssemblyName>
+    <RootNamespace>Parabolic.Console</RootNamespace>
+    <AssemblyName>Parabolic.Console</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -37,8 +37,6 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Numerics" />
-    <Reference Include="System.Numerics.Vectors" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -56,6 +54,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Roca.cs" />
+    <Compile Include="Vector3.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
