--- a/Parabolic/ParabolicTests/ParabolicTests.csproj
+++ b/Parabolic/ParabolicTests/ParabolicTests.csproj
@@ -58,6 +58,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Numerics.Vectors" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="xunit.abstractions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
@@ -71,6 +73,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Vector3Should.cs" />
     <Compile Include="SegmentDangleShould.cs" />
     <Compile Include="EcuacionesShould.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
